# fluid_simulations

./: Cargo.toml  README.md  simulation.wgsl
src/: lib.rs  main.rs
src/shader/bounding/: bounding_box.frag  bounding_box.vert
src/shader/compute/: simulation.wgsl
src/shader/density/: density.frag  density.vert
src/shader/particle/: particle.frag  particle.vert
src/shader/pressure/: pressure.wgsl
src/shader/smoothing/: smoothing.frag  smoothing.vert
src/shader/texture/: texture.vert
src/simulation/: bounding_box.rs  grid.rs  mod.rs  simulation.rs
src/state/: events.rs  mod.rs  render.rs  shader_helper.rs  state.rs  update.rs
src/state/camera/: camera.rs  camera_controller.rs  mod.rs
src/state/managers/: mod.rs  pipeline_manager.rs  texture_manager.rs
src/state/plane_state/: density_visualizer.rs  mod.rs  pressure_visualizer.rs  smoothing_ring.rs
src/utils/: console_logger.rs  fps.rs  mod.rs
