[package]
name = "fluid_simulations"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
bytemuck = { version = "1.16.1", features = ["derive"] }
cgmath = "0.18.0"
crossterm = "0.27.0"
env_logger = "0.11.3"
futures = "0.3.30"
log = "0.4.21"
naga = "0.20.0"
rand = "0.8.5"
rayon = "1.10.0"
wgpu = { version = "0.20.1", features = ["glsl", "webgl"] }
winit = { version = "0.29.1", features = ["rwh_05"] }

[dependencies.image]
version = "0.25.1"
default-features = false
features = ["png", "jpeg"]

[[bin]]
name = "main"
path = "./src/main.rs"
